# certifiable-inference

./: .gitignore  CMakeLists.txt  manifest  packages.manifest
certifiable-inference/: buildfile  manifest
certifiable-inference-examples/: .gitignore  manifest
certifiable-inference-examples/src/: buildfile
certifiable-inference-tests/: .gitignore  manifest
certifiable-inference-tests/benchmarks/: buildfile
certifiable-inference-tests/unit/: buildfile  test_srs005_compliance.c
certifiable-inference/include/: fixed_point.h
certifiable-inference/include/axilog/: types.h
certifiable-inference/src/core/: fixed_point.c
